<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:id="@+id/welcome_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/app_name"
            android:maxWidth="240dp"
            android:maxHeight="240dp"
            android:minWidth="140dp"
            android:minHeight="140dp"
            android:src="@drawable/htc_logo" />

        <Button
            android:id="@+id/btnShowAdds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnShowAdsClicked"
            android:text="@string/btn_show_ads_name" />

        <Button
            android:id="@+id/btnInsertAdds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnInsertAdsClicked"
            android:text="@string/btn_insert_ads_name" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnExitClicked"
            android:text="@string/btn_exit_name" />
    </LinearLayout>

    <fragment
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/fragment_navigation_drawer"
        android:layout="@layout/fragment_navigation"
        tools:layout="@layout/fragment_navigation"
        app:layout="@layout/fragment_navigation"
        android:name="com.example.irprogramtest.NavigationFragment"
        android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>